// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkTN_TSVDataRow() should fail to find OrigLang Quote 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": undefined,
      "extract": "וְ⁠חֹ֖שֶךְ",
      "lineNumber": undefined,
      "location": " in OrigQuote that was supplied",
      "message": "Unable to find original language quote in verse text",
      "priority": 912,
      "rowID": "d7qw",
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() should find bad ellipse 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": undefined,
      "extract": undefined,
      "lineNumber": undefined,
      "location": " that was supplied",
      "message": "Missing OrigQuote field",
      "priority": 913,
      "rowID": "w3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 11,
      "extract": "…lipse...",
      "lineNumber": undefined,
      "location": " in 'GLQuote' that was supplied",
      "message": "Unexpected doubled . characters",
      "priority": 177,
      "rowID": "w3r5",
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() should find invalid Book ID, chapter number, ID, SupportReference, quotes, OccurrenceNote 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": undefined,
      "extract": undefined,
      "lineNumber": undefined,
      "location": " (expected 'GEN') that was supplied",
      "message": "Wrong 'GIN' book identifier",
      "priority": 978,
      "rowID": "W-3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": undefined,
      "extract": "200",
      "lineNumber": undefined,
      "location": " that was supplied",
      "message": "Invalid large chapter number",
      "priority": 823,
      "rowID": "W-3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": undefined,
      "extract": undefined,
      "lineNumber": undefined,
      "location": " '9' that was supplied",
      "message": "Unable to check verse number",
      "priority": 812,
      "rowID": "W-3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": undefined,
      "extract": undefined,
      "lineNumber": undefined,
      "location": " (not 5) that was supplied",
      "message": "ID should be exactly 4 characters",
      "priority": 778,
      "rowID": "W-3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": undefined,
      "extract": "Laugh",
      "lineNumber": undefined,
      "location": " in SupportReference that was supplied translate/Laugh/01.md: Could not find __tests__/fixtures/unfoldingWord/en_ta/translate/Laugh/01.md",
      "message": "Error loading SupportReference TA link",
      "priority": 888,
      "rowID": "W-3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": undefined,
      "extract": "Laugh",
      "lineNumber": undefined,
      "location": " in SupportReference that was supplied translate/Laugh/01.md",
      "message": "Unable to find SupportReference TA link",
      "priority": 889,
      "rowID": "W-3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": undefined,
      "extract": undefined,
      "lineNumber": undefined,
      "location": " that was supplied",
      "message": "Missing OrigQuote field",
      "priority": 913,
      "rowID": "W-3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": undefined,
      "extract": undefined,
      "lineNumber": undefined,
      "location": " that was supplied",
      "message": "Invalid '17' occurrence field",
      "priority": 792,
      "rowID": "W-3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 11,
      "extract": "…lipse...",
      "lineNumber": undefined,
      "location": " in 'GLQuote' that was supplied",
      "message": "Unexpected doubled . characters",
      "priority": 177,
      "rowID": "W-3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 0,
      "extract": "<br>Boo ho…",
      "lineNumber": undefined,
      "location": " that was supplied",
      "message": "Unexpected leading break",
      "priority": 107,
      "rowID": "W-3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 11,
      "extract": "…o hoo,,<br…",
      "lineNumber": undefined,
      "location": " in 'line 1' in OccurrenceNote that was supplied",
      "message": "Unexpected doubled , characters",
      "priority": 177,
      "rowID": "W-3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 30,
      "extract": "… shoe !",
      "lineNumber": undefined,
      "location": " in 'line 1' in OccurrenceNote that was supplied",
      "message": "Unexpected ! character after space",
      "priority": 191,
      "rowID": "W-3r5",
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() should find invalid SupportReference and missing quotes 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": undefined,
      "extract": "Laugh",
      "lineNumber": undefined,
      "location": " in SupportReference that was supplied translate/Laugh/01.md: Could not find __tests__/fixtures/unfoldingWord/en_ta/translate/Laugh/01.md",
      "message": "Error loading SupportReference TA link",
      "priority": 888,
      "rowID": "w3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": undefined,
      "extract": "Laugh",
      "lineNumber": undefined,
      "location": " in SupportReference that was supplied translate/Laugh/01.md",
      "message": "Unable to find SupportReference TA link",
      "priority": 889,
      "rowID": "w3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": undefined,
      "extract": undefined,
      "lineNumber": undefined,
      "location": " that was supplied",
      "message": "Missing OrigQuote field",
      "priority": 913,
      "rowID": "w3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": undefined,
      "extract": undefined,
      "lineNumber": undefined,
      "location": " that was supplied",
      "message": "Missing GLQuote field",
      "priority": 275,
      "rowID": "w3r5",
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() should find mismatched bookId 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": undefined,
      "extract": undefined,
      "lineNumber": undefined,
      "location": " (expected 'GEN') that was supplied",
      "message": "Wrong 'EXO' book identifier",
      "priority": 978,
      "rowID": "d7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": undefined,
      "extract": undefined,
      "lineNumber": undefined,
      "location": " that was supplied",
      "message": "Missing OrigQuote field",
      "priority": 913,
      "rowID": "d7qw",
    },
    Object {
       "C": "1",
       "V": "2",
       "bookID": "GEN",
       "characterIndex": undefined,
       "extract": undefined,
       "lineNumber": undefined,
       "location": " that was supplied",
       "message": "Missing OrigQuote field",
       "priority": 913,
       "rowID": "d7qw",
     },
  ],
}
`;

exports[`checkTN_TSVDataRow() should find missing Original Quote 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": undefined,
      "extract": undefined,
      "lineNumber": undefined,
      "location": " that was supplied",
      "message": "Missing OrigQuote field",
      "priority": 913,
      "rowID": "d7qw",
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() should find not TSV 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": undefined,
      "extract": "Found 1 field",
      "lineNumber": undefined,
      "location": " that was supplied",
      "message": "Found wrong number of TSV fields (expected 9)",
      "priority": 861,
      "rowID": undefined,
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() should find wrong row count 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": undefined,
      "extract": "Found 8 fields",
      "lineNumber": undefined,
      "location": " that was supplied",
      "message": "Found wrong number of TSV fields (expected 9)",
      "priority": 861,
      "rowID": undefined,
    },
  ],
}
`;
